# vscode-launchpad

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  docker-compose.yml  package-lock.json  package.json  pkg.config.json
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json  fr-profiles.yaml
.devcontainer/builder/: devcontainer.json
.devcontainer/dev/: devcontainer.json
.github/workflows/: release.yml  test.yml
docs/: DOCKER.md  MACOS-CODE-SIGNING.md  TESTING.md  TROUBLESHOOTING.md
docs/superpowers/debugging/: 2026-07-21-sidecar-macos-26-compat.md
e2e/: claude-sessions.spec.js  column-visibility.spec.js  dashboard.spec.js  table-ux.spec.js
openspec/changes/apple-notarization/: design.md  tasks.md  (+1 more)
public/: asset-manifest.json  index.html  index.template.html
scripts/: build-sidecar.js  claude-session-hook.sh  install-claude-hooks.sh  validate-plans.sh
server/: claudeSessionScanner.js  index.js  workspaceScanner.js
server/__tests__/: api.test.js  claudeSessionScanner.test.js  docs-references.test.js  workspaceScanner.test.js
src/: App.css  App.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  menu.rs  tray.rs
src/api/: client.js
src/components/: ClaudeSessionSummary.css  ClaudeSessionSummary.js  Dashboard.css  Dashboard.js  SearchFilter.css  WorkspaceTable.css  WorkspaceTable.js
src/hooks/: useClaudeNotifications.js  useClaudeSessions.js
src/utils/: tableLayout.js  tableLayout.test.js
(+97 files in other folders)
