[package]
name = "vscode-launchpad"
version = "1.0.0"
description = "VS Code Launchpad - Desktop Application"
authors = ["VS Code Launchpad"]
license = "MIT"
repository = "https://github.com/derio-net/vscode-launchpad"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2"
